Added the recaptcha with validation. Tested send email (i used my personal email and gmail for this part and it worked )

--- a/LiyaTea.UI/Views/Home/_contact.cshtml
+++ b/LiyaTea.UI/Views/Home/_contact.cshtml
@@ -1,4 +1,7 @@
-﻿<section id="contactUs" style="margin-top:60px">
+﻿@using reCAPTCHA.MVC
+<script src="//www.google.com/recaptcha/api.js"></script>
+
+<section id="contactUs" style="margin-top:60px">
     <div class="container text-center">
         <div class="col-md-12 contact_content">
             <div class="textContainer">
@@ -7,8 +10,11 @@
                 <p class="text-center"> If you have questions about your order or our products and services, please submit the form below and a member of our staff will reply as soon as possible.</p>
                 <br />
                 <div class="text-left">
-                    @using (Html.BeginForm("Index", "Contact"))
+                    @using (Html.BeginForm("Email", "Home", FormMethod.Post))
                     {
+
+                        @Html.ValidationMessage("Success", new { @style = "color:green;font-size:20px;text-align: center" })
+
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input type="text" class="form-control" id="name" name="name" placeholder="Name">
@@ -24,16 +30,32 @@
                             <textarea class="form-control" id="message" name="message" placeholder="Message"></textarea>
                             <span class="pull-right alert-error validationFormessage-contact-1"></span>
                         </div>
+
                         <div class="form-group">
-                            <div class="g-recaptcha" data-sitekey="6LcqsGoUAAAAADwasiDTdnW76UinQE61RonOXbq1"></div>
+
+                            <!-- <div class="g-recaptcha" data-sitekey="6LcqsGoUAAAAADwasiDTdnW76UinQE61RonOXbq1"></div> -->
+                            @Html.ValidationMessage("ReCaptcha", new { @style = "color:red", id = "validate" })
+                            @Html.Recaptcha()
                         </div>
+
                         <button type="submit" class="btn btn-primary" id="sendContact">SEND</button>
                         <div class="ajax-message col-md-12 no-gap fontColorGreenAndLarge">
-
                         </div>
                     }
+
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<!--<script>
+    $(".recaptcha-checkbox-spinner").change(function () {
+        if (this.checked) {
+           
+            $("#validate").hide(); // make them display: none
+            $("#validate").remove(); // remove them from the DOM completely
+            $("#validate").empty(); 
+        }
+    });
+</script> -->
